[gd_scene load_steps=2 format=3 uid="uid://bv4i7enwxx83r"]

[ext_resource type="Script" path="res://Scenes/Gun/gun.gd" id="1_1ktlj"]

[node name="Gun" type="Polygon2D"]
color = Color(0, 0, 0, 1)
script = ExtResource("1_1ktlj")

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(49, 0)
gizmo_extents = 1.0

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]

[node name="ShotDelay" type="Timer" parent="."]
one_shot = true

[node name="Magwell" type="Node2D" parent="."]

[connection signal="timeout" from="ShotDelay" to="." method="_on_shot_delay_timeout"]
